# claude-tmux

./: Cargo.toml  README.md  design-doc.md
docs/: git-worktree-design.md
src/: app.rs  completion.rs  detection.rs  git.rs  input.rs  main.rs  scroll_state.rs  session.rs  tmux.rs  ui.rs
src/app/: helpers.rs  mod.rs  mode.rs
src/git/: forge.rs  github.rs  mod.rs  operations.rs  worktree.rs
src/ui/: dialogs.rs  help.rs  mod.rs
